--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "nuxt": "^3.12.4",
+    "pagedone": "^1.2.1",
     "swiper": "^8.4.7",
     "vue": "latest",
     "vue-awesome-swiper": "^5.0.1"
