--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@vercel/speed-insights": "^1.0.12",
+    "axios": "^1.7.5",
+    "moment": "^2.30.1",
     "nuxt": "^3.12.4",
     "pagedone": "^1.2.1",
     "swiper": "^8.4.7",
