--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@vercel/speed-insights": "^1.0.12",
     "axios": "^1.7.5",
+    "locomotive-scroll": "^4.1.4",
     "moment": "^2.30.1",
     "nuxt": "^3.12.4",
     "pagedone": "^1.2.1",
