--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@vercel/speed-insights": "^1.0.12",
+    "apextree": "^1.3.0",
     "axios": "^1.7.5",
     "locomotive-scroll": "^4.1.4",
     "moment": "^2.30.1",
