--- a/package.json
+++ b/package.json
@@ -17,9 +17,9 @@
     "moment": "^2.30.1",
     "nuxt": "^3.12.4",
     "pagedone": "^1.2.1",
-    "swiper": "^8.4.7",
     "vue": "latest",
-    "vue-awesome-swiper": "^5.0.1"
+    "vue-awesome-swiper": "^5.0.1",
+    "vue3-carousel-nuxt": "^1.1.3"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.20",
