--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@headlessui/vue": "^1.7.23",
+    "@heroicons/vue": "^2.1.5",
     "@vercel/speed-insights": "^1.0.12",
     "apextree": "^1.3.0",
     "axios": "^1.7.5",
