--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@headlessui/vue": "^1.7.23",
     "@heroicons/vue": "^2.1.5",
+    "@nuxt/image": "^1.8.1",
+    "@nuxt/image-edge": "^1.3.0-28493895.369b747",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@vercel/analytics": "^1.3.1",
     "@vercel/speed-insights": "^1.0.12",
