--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@vercel/analytics": "^1.3.1",
     "@vercel/speed-insights": "^1.0.12",
+    "@vueuse/motion": "^2.2.6",
     "apextree": "^1.3.0",
     "axios": "^1.7.5",
     "moment": "^2.30.1",
