--- a/package.json
+++ b/package.json
@@ -12,14 +12,17 @@
   "dependencies": {
     "@headlessui/vue": "^1.7.23",
     "@heroicons/vue": "^2.1.5",
+    "@nuxt/content": "^3.1.0",
     "@nuxt/image": "^1.8.1",
     "@nuxt/image-edge": "^1.3.0-28493895.369b747",
+    "@nuxtjs/sitemap": "^7.2.4",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@vercel/analytics": "^1.3.1",
     "@vercel/speed-insights": "^1.0.12",
     "@vueuse/motion": "^2.2.6",
     "apextree": "^1.3.0",
     "axios": "^1.7.5",
+    "glob": "^11.0.1",
     "moment": "^2.30.1",
     "nuxt": "^3.12.4",
     "pagedone": "^1.2.1",
