--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "build": "nuxt build",
+    "build": "nuxt build", 
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
@@ -26,6 +26,7 @@
     "moment": "^2.30.1",
     "nuxt": "^3.12.4",
     "pagedone": "^1.2.1",
+    "sharp": "^0.33.5",
     "vue": "latest",
     "vue-awesome-swiper": "^5.0.1",
     "vue3-carousel-nuxt": "^1.1.3"
